// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AddPlaylistModalView /> should render AddPlaylistModalView component 1`] = `
<form
  autocomplete="off"
>
  <div
    class="sc-csKJRI iyUWNp"
  >
    <div
      class="sc-guDMob jLqGJD"
      style="margin-bottom: 8px;"
    >
      Select a playlist to monitor
    </div>
    <div
      class="rows"
    >
      <div
        class="sc-fsYfxw husJzd"
      >
        <label
          class=""
          for="aria-example-input"
          id="aria-label"
        >
          Select Playlist
        </label>
        <div
          class="basic-select css-b62m3t-container"
        >
          <span
            class="css-1f43avz-a11yText-A11yText"
            id="react-select-2-live-region"
          />
          <span
            aria-atomic="false"
            aria-live="polite"
            aria-relevant="additions text"
            class="css-1f43avz-a11yText-A11yText"
          />
          <div
            class="select__control css-13cymwt-control"
          >
            <div
              class="select__value-container css-1fdsijx-ValueContainer"
            >
              <div
                class="select__placeholder css-1jqq78o-placeholder"
                id="react-select-2-placeholder"
              >
                Select playlist to monitor...
              </div>
              <div
                class="select__input-container css-qbdosj-Input"
                data-value=""
              >
                <input
                  aria-autocomplete="list"
                  aria-describedby="react-select-2-placeholder"
                  aria-expanded="false"
                  aria-haspopup="true"
                  aria-labelledby="aria-label"
                  autocapitalize="none"
                  autocomplete="off"
                  autocorrect="off"
                  class="select__input"
                  id="aria-example-input"
                  role="combobox"
                  spellcheck="false"
                  style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                  tabindex="0"
                  type="text"
                  value=""
                />
              </div>
            </div>
            <div
              class="select__indicators css-1hb7zxy-IndicatorsContainer"
            >
              <span
                class="select__indicator-separator css-1u9des2-indicatorSeparator"
              />
              <div
                aria-hidden="true"
                class="select__indicator select__dropdown-indicator css-1xc3v61-indicatorContainer"
              >
                <svg
                  aria-hidden="true"
                  class="css-tj5bde-Svg"
                  focusable="false"
                  height="20"
                  viewBox="0 0 20 20"
                  width="20"
                >
                  <path
                    d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                  />
                </svg>
              </div>
            </div>
          </div>
          <input
            name="playlist_select"
            type="hidden"
            value=""
          />
        </div>
      </div>
      <div
        class="row"
      >
        <div
          class="sc-dmyDmy dcXriK"
        >
          Skip threshold (seconds):
        </div>
        <div
          class="sc-qZruQ eKreTG"
          variation="boxed"
        >
          <div
            class="input-container"
          >
            <input
              class="number-input"
              data-testid="skip-threshold-input"
              id="skip-threshold-input"
              max="999"
              min="1"
              type="number"
              value="10"
            />
          </div>
        </div>
        <svg
          data-tooltip-id="skip-threshold-tooltip"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 16 16"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M7.5 1a6.5 6.5 0 1 0 0 13 6.5 6.5 0 0 0 0-13zm0 12a5.5 5.5 0 1 1 0-11 5.5 5.5 0 0 1 0 11zm1.55-8.42a1.84 1.84 0 0 0-.61-.42A2.25 2.25 0 0 0 7.53 4a2.16 2.16 0 0 0-.88.17c-.239.1-.45.254-.62.45a1.89 1.89 0 0 0-.38.62 3 3 0 0 0-.15.72h1.23a.84.84 0 0 1 .506-.741.72.72 0 0 1 .304-.049.86.86 0 0 1 .27 0 .64.64 0 0 1 .22.14.6.6 0 0 1 .16.22.73.73 0 0 1 .06.3c0 .173-.037.343-.11.5a2.4 2.4 0 0 1-.27.46l-.35.42c-.12.13-.24.27-.35.41a2.33 2.33 0 0 0-.27.45 1.18 1.18 0 0 0-.1.5v.66H8v-.49a.94.94 0 0 1 .11-.42 3.09 3.09 0 0 1 .28-.41l.36-.44a4.29 4.29 0 0 0 .36-.48 2.59 2.59 0 0 0 .28-.55 1.91 1.91 0 0 0 .11-.64 2.18 2.18 0 0 0-.1-.67 1.52 1.52 0 0 0-.35-.55zM6.8 9.83h1.17V11H6.8V9.83z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="row"
      >
        <div
          class="toggle-input"
        >
          <label
            class="sc-jsEeA-d jaBtPN"
          >
            <span>
              Ignore initial skips
            </span>
            <input
              class="sc-irLvoH fMWZsq"
              data-testid="ignore-intial-skips-toggle"
              id="ignore-intial-skips-toggle"
              type="checkbox"
            />
            <div
              class="sc-kFCrIq hXOzeQ"
            />
          </label>
        </div>
        <svg
          data-tooltip-id="initial-skips-tooltip"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 16 16"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M7.5 1a6.5 6.5 0 1 0 0 13 6.5 6.5 0 0 0 0-13zm0 12a5.5 5.5 0 1 1 0-11 5.5 5.5 0 0 1 0 11zm1.55-8.42a1.84 1.84 0 0 0-.61-.42A2.25 2.25 0 0 0 7.53 4a2.16 2.16 0 0 0-.88.17c-.239.1-.45.254-.62.45a1.89 1.89 0 0 0-.38.62 3 3 0 0 0-.15.72h1.23a.84.84 0 0 1 .506-.741.72.72 0 0 1 .304-.049.86.86 0 0 1 .27 0 .64.64 0 0 1 .22.14.6.6 0 0 1 .16.22.73.73 0 0 1 .06.3c0 .173-.037.343-.11.5a2.4 2.4 0 0 1-.27.46l-.35.42c-.12.13-.24.27-.35.41a2.33 2.33 0 0 0-.27.45 1.18 1.18 0 0 0-.1.5v.66H8v-.49a.94.94 0 0 1 .11-.42 3.09 3.09 0 0 1 .28-.41l.36-.44a4.29 4.29 0 0 0 .36-.48 2.59 2.59 0 0 0 .28-.55 1.91 1.91 0 0 0 .11-.64 2.18 2.18 0 0 0-.1-.67 1.52 1.52 0 0 0-.35-.55zM6.8 9.83h1.17V11H6.8V9.83z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="row"
      >
        <div
          class="sc-dmyDmy dcXriK"
        >
          Auto-delete tracks after:
        </div>
        <div
          class="sc-qZruQ eKreTG"
          variation="boxed"
        >
          <div
            class="input-container"
          >
            <input
              class="number-input"
              data-testid="auto-delete-input"
              id="auto-delete-input"
              max="999"
              min="0"
              type="number"
            />
          </div>
        </div>
        <div
          class="sc-dmyDmy dcXriK auto-delete-post-text"
        >
          skips
        </div>
        <svg
          data-tooltip-id="aut-delete-tooltip"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 16 16"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M7.5 1a6.5 6.5 0 1 0 0 13 6.5 6.5 0 0 0 0-13zm0 12a5.5 5.5 0 1 1 0-11 5.5 5.5 0 0 1 0 11zm1.55-8.42a1.84 1.84 0 0 0-.61-.42A2.25 2.25 0 0 0 7.53 4a2.16 2.16 0 0 0-.88.17c-.239.1-.45.254-.62.45a1.89 1.89 0 0 0-.38.62 3 3 0 0 0-.15.72h1.23a.84.84 0 0 1 .506-.741.72.72 0 0 1 .304-.049.86.86 0 0 1 .27 0 .64.64 0 0 1 .22.14.6.6 0 0 1 .16.22.73.73 0 0 1 .06.3c0 .173-.037.343-.11.5a2.4 2.4 0 0 1-.27.46l-.35.42c-.12.13-.24.27-.35.41a2.33 2.33 0 0 0-.27.45 1.18 1.18 0 0 0-.1.5v.66H8v-.49a.94.94 0 0 1 .11-.42 3.09 3.09 0 0 1 .28-.41l.36-.44a4.29 4.29 0 0 0 .36-.48 2.59 2.59 0 0 0 .28-.55 1.91 1.91 0 0 0 .11-.64 2.18 2.18 0 0 0-.1-.67 1.52 1.52 0 0 0-.35-.55zM6.8 9.83h1.17V11H6.8V9.83z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </div>
    <div
      style="display: flex; flex-direction: row; justify-content: flex-end;"
    >
      <button
        class="sc-jTQDJr sc-iBdoyZ gmttQv bbczBv secondary"
        data-testid="cancel-modal-button"
        id="cancel-modal-button"
        style="margin: 0px 4px;"
        type="button"
      >
        Cancel
      </button>
      <button
        class="sc-jTQDJr sc-gLLuHO gmttQv lckOnr primary"
        data-testid="confirm-modal-button"
        id="confirm-modal-button"
        style="margin: 0px 4px;"
        type="submit"
      >
        Confirm
      </button>
    </div>
  </div>
</form>
`;

exports[`<AddPlaylistModalView /> should render AddPlaylistModalView component with an error 1`] = `
<form
  autocomplete="off"
>
  <div
    class="sc-csKJRI iyUWNp"
  >
    <div
      class="sc-guDMob jLqGJD"
      style="margin-bottom: 8px;"
    >
      Select a playlist to monitor
    </div>
    <div
      class="rows"
    >
      <div
        class="sc-fsYfxw husJzd"
      >
        <label
          class=""
          for="aria-example-input"
          id="aria-label"
        >
          Select Playlist
        </label>
        <div
          class="basic-select css-b62m3t-container"
        >
          <span
            class="css-1f43avz-a11yText-A11yText"
            id="react-select-4-live-region"
          />
          <span
            aria-atomic="false"
            aria-live="polite"
            aria-relevant="additions text"
            class="css-1f43avz-a11yText-A11yText"
          />
          <div
            class="select__control css-13cymwt-control"
          >
            <div
              class="select__value-container css-1fdsijx-ValueContainer"
            >
              <div
                class="select__placeholder css-1jqq78o-placeholder"
                id="react-select-4-placeholder"
              >
                Select playlist to monitor...
              </div>
              <div
                class="select__input-container css-qbdosj-Input"
                data-value=""
              >
                <input
                  aria-autocomplete="list"
                  aria-describedby="react-select-4-placeholder"
                  aria-expanded="false"
                  aria-haspopup="true"
                  aria-labelledby="aria-label"
                  autocapitalize="none"
                  autocomplete="off"
                  autocorrect="off"
                  class="select__input"
                  id="aria-example-input"
                  role="combobox"
                  spellcheck="false"
                  style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                  tabindex="0"
                  type="text"
                  value=""
                />
              </div>
            </div>
            <div
              class="select__indicators css-1hb7zxy-IndicatorsContainer"
            >
              <span
                class="select__indicator-separator css-1u9des2-indicatorSeparator"
              />
              <div
                aria-hidden="true"
                class="select__indicator select__dropdown-indicator css-1xc3v61-indicatorContainer"
              >
                <svg
                  aria-hidden="true"
                  class="css-tj5bde-Svg"
                  focusable="false"
                  height="20"
                  viewBox="0 0 20 20"
                  width="20"
                >
                  <path
                    d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                  />
                </svg>
              </div>
            </div>
          </div>
          <input
            name="playlist_select"
            type="hidden"
            value=""
          />
        </div>
      </div>
      <div
        class="row"
      >
        <div
          class="sc-dmyDmy dcXriK"
        >
          Skip threshold (seconds):
        </div>
        <div
          class="sc-qZruQ eKreTG"
          variation="boxed"
        >
          <div
            class="input-container"
          >
            <input
              class="number-input"
              data-testid="skip-threshold-input"
              id="skip-threshold-input"
              max="999"
              min="1"
              type="number"
              value="10"
            />
          </div>
        </div>
        <svg
          data-tooltip-id="skip-threshold-tooltip"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 16 16"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M7.5 1a6.5 6.5 0 1 0 0 13 6.5 6.5 0 0 0 0-13zm0 12a5.5 5.5 0 1 1 0-11 5.5 5.5 0 0 1 0 11zm1.55-8.42a1.84 1.84 0 0 0-.61-.42A2.25 2.25 0 0 0 7.53 4a2.16 2.16 0 0 0-.88.17c-.239.1-.45.254-.62.45a1.89 1.89 0 0 0-.38.62 3 3 0 0 0-.15.72h1.23a.84.84 0 0 1 .506-.741.72.72 0 0 1 .304-.049.86.86 0 0 1 .27 0 .64.64 0 0 1 .22.14.6.6 0 0 1 .16.22.73.73 0 0 1 .06.3c0 .173-.037.343-.11.5a2.4 2.4 0 0 1-.27.46l-.35.42c-.12.13-.24.27-.35.41a2.33 2.33 0 0 0-.27.45 1.18 1.18 0 0 0-.1.5v.66H8v-.49a.94.94 0 0 1 .11-.42 3.09 3.09 0 0 1 .28-.41l.36-.44a4.29 4.29 0 0 0 .36-.48 2.59 2.59 0 0 0 .28-.55 1.91 1.91 0 0 0 .11-.64 2.18 2.18 0 0 0-.1-.67 1.52 1.52 0 0 0-.35-.55zM6.8 9.83h1.17V11H6.8V9.83z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="row"
      >
        <div
          class="toggle-input"
        >
          <label
            class="sc-jsEeA-d jaBtPN"
          >
            <span>
              Ignore initial skips
            </span>
            <input
              class="sc-irLvoH fMWZsq"
              data-testid="ignore-intial-skips-toggle"
              id="ignore-intial-skips-toggle"
              type="checkbox"
            />
            <div
              class="sc-kFCrIq hXOzeQ"
            />
          </label>
        </div>
        <svg
          data-tooltip-id="initial-skips-tooltip"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 16 16"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M7.5 1a6.5 6.5 0 1 0 0 13 6.5 6.5 0 0 0 0-13zm0 12a5.5 5.5 0 1 1 0-11 5.5 5.5 0 0 1 0 11zm1.55-8.42a1.84 1.84 0 0 0-.61-.42A2.25 2.25 0 0 0 7.53 4a2.16 2.16 0 0 0-.88.17c-.239.1-.45.254-.62.45a1.89 1.89 0 0 0-.38.62 3 3 0 0 0-.15.72h1.23a.84.84 0 0 1 .506-.741.72.72 0 0 1 .304-.049.86.86 0 0 1 .27 0 .64.64 0 0 1 .22.14.6.6 0 0 1 .16.22.73.73 0 0 1 .06.3c0 .173-.037.343-.11.5a2.4 2.4 0 0 1-.27.46l-.35.42c-.12.13-.24.27-.35.41a2.33 2.33 0 0 0-.27.45 1.18 1.18 0 0 0-.1.5v.66H8v-.49a.94.94 0 0 1 .11-.42 3.09 3.09 0 0 1 .28-.41l.36-.44a4.29 4.29 0 0 0 .36-.48 2.59 2.59 0 0 0 .28-.55 1.91 1.91 0 0 0 .11-.64 2.18 2.18 0 0 0-.1-.67 1.52 1.52 0 0 0-.35-.55zM6.8 9.83h1.17V11H6.8V9.83z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="row"
      >
        <div
          class="sc-dmyDmy dcXriK"
        >
          Auto-delete tracks after:
        </div>
        <div
          class="sc-qZruQ eKreTG"
          variation="boxed"
        >
          <div
            class="input-container"
          >
            <input
              class="number-input"
              data-testid="auto-delete-input"
              id="auto-delete-input"
              max="999"
              min="0"
              type="number"
            />
          </div>
        </div>
        <div
          class="sc-dmyDmy dcXriK auto-delete-post-text"
        >
          skips
        </div>
        <svg
          data-tooltip-id="aut-delete-tooltip"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 16 16"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M7.5 1a6.5 6.5 0 1 0 0 13 6.5 6.5 0 0 0 0-13zm0 12a5.5 5.5 0 1 1 0-11 5.5 5.5 0 0 1 0 11zm1.55-8.42a1.84 1.84 0 0 0-.61-.42A2.25 2.25 0 0 0 7.53 4a2.16 2.16 0 0 0-.88.17c-.239.1-.45.254-.62.45a1.89 1.89 0 0 0-.38.62 3 3 0 0 0-.15.72h1.23a.84.84 0 0 1 .506-.741.72.72 0 0 1 .304-.049.86.86 0 0 1 .27 0 .64.64 0 0 1 .22.14.6.6 0 0 1 .16.22.73.73 0 0 1 .06.3c0 .173-.037.343-.11.5a2.4 2.4 0 0 1-.27.46l-.35.42c-.12.13-.24.27-.35.41a2.33 2.33 0 0 0-.27.45 1.18 1.18 0 0 0-.1.5v.66H8v-.49a.94.94 0 0 1 .11-.42 3.09 3.09 0 0 1 .28-.41l.36-.44a4.29 4.29 0 0 0 .36-.48 2.59 2.59 0 0 0 .28-.55 1.91 1.91 0 0 0 .11-.64 2.18 2.18 0 0 0-.1-.67 1.52 1.52 0 0 0-.35-.55zM6.8 9.83h1.17V11H6.8V9.83z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="row error"
        data-testid="modal-error"
        id="modal-error"
      >
        <div
          class="sc-hLQTFJ gjIzVE"
        >
          MODAL_ERROR
        </div>
      </div>
    </div>
    <div
      style="display: flex; flex-direction: row; justify-content: flex-end;"
    >
      <button
        class="sc-jTQDJr sc-iBdoyZ gmttQv bbczBv secondary"
        data-testid="cancel-modal-button"
        id="cancel-modal-button"
        style="margin: 0px 4px;"
        type="button"
      >
        Cancel
      </button>
      <button
        class="sc-jTQDJr sc-gLLuHO gmttQv lckOnr primary"
        data-testid="confirm-modal-button"
        id="confirm-modal-button"
        style="margin: 0px 4px;"
        type="submit"
      >
        Confirm
      </button>
    </div>
  </div>
</form>
`;
